--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -7,7 +7,8 @@
 	<body style="margin: 0; padding: 0;">
 		<header style="background-color: #FF0000; height: 70px; width: 100%;"></header>
 	</body>
-	<footer style="background-color: #00FF00; height: 60px; width: 100%; position: absolute; bottom: 0;">
-		<p style="text-align: center">Best School</p>
+	<footer style="background-color: #00FF00; height: 60px; width: 100%; text-align: center; `:w
+	position: absolute; bottom: 0;">
+		<p>Best School</p>
 	</footer>
 </html>
