Some incision made

--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -4,11 +4,18 @@
 	<meta charset=utf-8">
 	<title>AIrBnB Clone</title>
 	<link rel="stylesheet" href="styles/4-common.css">
-	<link rel="stylesheet" href="styles/4-header.css">
-	<link rel="stylesheet" href="styles/4-footer.css">
+	<link rel="stylesheet" href="styles/3-header.css">
+	<link rel="stylesheet" href="styles/3-footer.css">
+	<link rel="stylesheet" href="styles/4-filters.css">
 </head>
 	<body>
-		<header></header>
+		<header>
+		</header>
+		<div class="container">
+			<section class="filters">
+				<button>Search</button>
+			</section>
+		</div>
 	</body>
 	<footer>
 	<p>Best School</p>
